Sat Nov 25 14:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkprefs.c: Merge fix for bug in saving/exporting custom designs from 0.16

Fri Nov 17 09:48:05 CET 2006 Christian Anthon <anthon@kiku.dk>

	* gtkgame.c: Stop SIGSEGV when calling up Score Sheet Dialog
	* gtkgame.c: Avoid screen jumble when full screen warning shown

Mon Nov 13 18:50:22 CET 2006 Christian Anthon <anthon@kiku.dk>

	* Makefile.am, configure.in, board3d/.cvsignore, board3d/Makefile.am,
	lib/.cvsignore, lib/Makefile.am: Use libtool static libs.

Mon Nov 13 12:16:54 CET 2006 Christian Anthon <anthon@kiku.dk>

	* Makefile.am, configure.in, board3d/Makefile.am, lib/Makefile.am,
	non-src/Makfile.am: Add various files to EXTRA_DIST or sources.

Fri Nov 10 15:38:52 CET 2006 Christian Anthon <anthon@kiku.dk>

	* fonts/Makefile.am, flags/Makefile.am: Add flags and fonts to
	EXTRA_DIST

Fri Nov 10 12:23:52 CET 2006 Christian Anthon <anthon@kiku.dk>

	* Makefile.am, backgammon.h, configure.in, render.c,
	board3d/font3d.c,board3d/inc3d.h, fonts/ : added vera fonts 
	* gnubg.c: removed Convert function
	* render.c: fixed talisman crash bug
	* gnubgmodule.c: hopefully fixed AMD64 relational database crash

Tue Nov  7 14:12:40 CET 2006 Christian Anthon <anthon@kiku.dk>

	* eval.c: update to eval.c 1.295

Tue Nov  7 12:21:01 CET 2006 Christian Anthon <anthon@kiku.dk>

	* po/: updated gnubg.pot and .po files. Removed fuzzy.
	* configure.in: version updated to 0.15
	* flags/: added dir

Wed Oct 18 14:54:34 CEST 2006 Christian Anthon <anthon@kiku.dk>

	* Makefile.am, configure.in, gtkgame.c, flags/.cvsignore,
	flags/Makefile.am: automake and install stuff for the new flags

Wed Oct 18 09:31:12 CEST 2006 Christian Anthon <anthon@kiku.dk>

	* backgammon.h, gnubg.c, gtkgame.c, postscript.c, sgf.c: charset
	conversion cleanup

Tue Oct 17 15:03:08 CEST 2006 Christian Anthon <anthon@kiku.dk>

	* drawboard.c: avoid assuming length of translated strings
